# purecrypt

./: Cargo.toml  LICENSE
src/: chacha.rs  lib.rs  main.rs  utils.rs
src/chacha/: consts.rs  djb.rs  ietf.rs  original.rs  types.rs
src/chacha/djb/: cipher.rs  core.rs  rng.rs  types.rs
src/chacha/ietf/: cipher.rs  core.rs  rng.rs  types.rs
tests/: chacha_compare.rs  chacha_draft_vectors.rs  chacha_edges.rs  chacha_rfc8439.rs
