[package]
name = "purecrypt"
version = "0.0.0-alpha"
edition = "2024"
repository = "https://github.com/openRings/purecrypt"
description = "Minimal, readable, dependency-free implementations of modern cryptographic primitives in pure Rust"
keywords = ["crypto", "cryptography"]
license = "MIT"

[features]
default = ["rand"]
rand = ["dep:rand_core"]
zeroize = ["dep:zeroize"]

[dependencies]
rand_core = { version = "0.9", optional = true }
zeroize = { version = "1.8", default-features = false, features = ["derive"], optional = true }

